# NFLPlayoffFantasyFootball

./: .gitignore  NFL_conda_environment.yml  Playoff Fantasy.ipynb  Playoff_Fantasy.py  Playoff_Fantasy_Overview.py  README.md  WC_scrape.py  all_players.json  all_playoff_teams.json  all_weeks_scoring_dfs.json  conda_to_requirements.py  environment.yml  full_alphabetized_rosters.json  gitignore  name_cleaning.txt  pats_temp.json  pyproject.toml  requirements.txt  rules.md  total_scoring.json  ui_utils.py  weekly_writeup.md  yearly_settings.json
.devcontainer/: devcontainer.json
.streamlit/: config.toml  keys.json  secrets.toml
2022/: RosterInputDfs.py  Rosters_2022.csv  WC_scrape.py  requirements.txt  streamlit_form.py  streamlit_results.py
2022/.streamlit/: secrets.toml
2024/: RosterInputDfs.py  streamlit_form.py  streamlit_results.py
json_stores/: player_swaps.py
pages/: 1_✏️_Roster_Input.py  1_🏆_Standings.py  1_📈_Roster_Input.py  1_🔬_Compare_Rosters.py  2_📋_Scoring_Results.py  2_🔬_Compare_Rosters.py  3_🏆_Standings.py  4_✏️_Roster_Input.py  4_🔬_Compare_Rosters.py  Scoring_Results.py
pastYears/: Playoff Fantasy (1).ipynb  Playoff_Fantasy_21.ipynb
pastYears/2022/: Rosters_2022.csv  WC_scrape.py  streamlit_form.py
pastYears/2023/: NFL_Playoff_Fantasy_23.ipynb
tests/: test_roster_manager.py  test_sportsdata_api.py
utils/: WC_scrape.py  datetime_utils.py  roster_manager.py  scoring_utils.py  sportsdata_interface.py  ui_utils.py
